Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
